# go-ml-benchmarks

./: .gitignore  .gitmodules  CITATION.cff  Makefile  README.md  init.sh
bench-gofeatureprocessing-uds-raw-python-xgb/: main.py  requirements.txt
bench-grpc-python-sklearn-xgb/: main.py  predictor.proto  predictor_pb2.py  predictor_pb2_grpc.py
bench-grpc-python-sklearn-xgb/proto/: predictor_pb2.py
bench-http-json-python-gunicorn-flask-sklearn-xgb/: main.py  requirements.txt
bench-uds-grpc-cpp-xgb/: CMakeLists.txt  Makefile  predictor.cc  predictor.pb.cc  predictor.pb.h  server.cc
bench-uds-grpc-python-sklearn-xgb/: main.py
bench-uds-grpc-python-xgb/: main.py  requirements.txt
bench-uds-grpc-python-xgb/proto/: predictor_pb2_grpc.py
bench-uds-raw-python-xgb/: requirements.txt
cgo-version/: go.mod  go.sum
cgo-version/main/: main.go  main_test.go  passengerfp.go
cgo-version/xgb/: xgbooster.go  xgdmatrix.go
data/models/: go-featureprocessor.json  titanic.xgb  titanic_preprocessor.sklearn  titanic_v090.xgb
docs/: bench-clean.out  bench.out
docs/profiles/cgo/: out.folded  out.perf  perf.data
docs/profiles/grpc-cpp/: out.folded  perf.data
docs/profiles/grpc-python-processed/: out.folded  out.perf  perf.data
docs/profiles/grpc-python-sklearn/: out.folded  out.perf  perf.data
docs/profiles/leaves/: cpu.profile
docs/profiles/rest/: out.folded  out.perf  perf.data
docs/profiles/uds/: out.folded  out.perf  perf.data
go-client/: go.mod  go.sum  main_test.go
go-client/main/: main_test.go  passengerfp_test.go
go-client/proto/: predictor.pb.go  predictor_grpc.pb.go
notebooks/: xgb-titanic.ipynb
notebooks/.ipynb_checkpoints/: xgb-titanic-checkpoint.ipynb
proto/: predictor.proto
python-json-gunicorn-flask-sklearn-xgb/: requirements.txt
python-raw-uds-xgb/: main.py
python-server/: xgb-unixsocket-rawbytes-newconn.py
python-xgb-uds-raw/: requirements.txt
xgb_c_fifo_go/: Makefile  fifo_test.go  go.test
xgb_c_fifo_go/go/: fifo_test.go
xgb_c_fifo_go/profiles/: cpu.profile  mem.profile
xgb_c_fifo_go/xgboost/: Makefile  c-api-demo  c-api-demo.c  features.fifo
xgb_c_unixsocket_go/go/: main.go
xgb_c_unixsocket_go/xgboost/: c-api-demo  c-api-demo.c  model.xgb
